[package]
name = "flag_by_code"
version = "0.1.0"
authors = ["Lesterrry <contact@fetchdev.host>"]
repository = "https://github.com/Lesterrry/flag-by-code"
description = "Easiest way to get an emoji flag from BCP-47 language tags"
license = "Unlicense"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
